--- a/components/forms/index.html
+++ b/components/forms/index.html
@@ -116,11 +116,12 @@
                  <div class="card-body">
                   <!-- horizontal card -->
                       <form action="/" meathod="POST">
-                          <div class="mb-2 row">
-                              <label for="Email" class="form-label col-sm-4">Email</label>
-                              <div class="col-sm-8">
-                                <input type="email" name="email" id="Email" class="form-control" placeholder="Yogo@gmail.com" required>
-                              </div>
+                          <div class="mb-2 row form-floating">
+                              <!-- <label for="Email" class="form-label col-sm-4">Email</label> -->
+                             
+                                <input type="email" name="floatingInput" id="floatingInput" class="form-control col-sm-8" placeholder="Yogo@gmail.com" required>
+                                <label for="floatingInput">Email address</label>
+                             
                           </div>
                           <div class="mb-2 row">
                             <label for="password" class="form-label col-sm-4">password</label>
@@ -143,7 +144,7 @@
                             <div class="col-sm-4"></div>
                             <div class="col-sm-8 d-grid">
                               <button class="btn btn-success" type="button">
-                                <i class="fa-solid fa-lock mr-2"></i>
+                                <i class="fa-solid fa-lock " style="margin-right:9px;"></i>
                                     Login
                               </button>
                             </div>
@@ -162,8 +163,9 @@
                    
                     <label for="Email" class="form-label col-sm-4">Email</label>
             
-                   <div class="col-sm-8">
+                   <div class="col-sm-8 form-floating">
                     <input type="email" name="email" id="Email" class="form-control" placeholder="Yogo@gmail.com" required>
+                    <label for="floatingInputValue">Email</label>
                    </div>
                 </div>
                 <div class="row mb-2">
@@ -185,7 +187,7 @@
                    <div class="col"></div>
                    <div class="col-sm-8 d-grid">
                      <button class="btn btn-primary" type="button">
-                      <i class="fa-solid fa-lock"></i>
+                      <i class="fa-solid fa-lock mr-3"></i>
                       login</button>
                    </div>
                 </div>
@@ -193,10 +195,34 @@
            </div>
         </div>
 
+        <div class="container my-3">
+          <div class="row">
+            <div class="col-sm-6">
+               <div class="card">
+                 <div class="card-body">
+                  <!-- Input Group -->
+                  <form action="/" method="post">
+                    <div class="mb-3 input-group">
+                      <span class="input-group-text"><i class="fa-solid fa-envelope"></i></span>
+                      <input type="email" name="email" id="email" class="form-control" placeholder="you@gmail.com">
+                    </div>
+                    <div class="mb-3 input-group">
+                      <input type="password" name="password" id="password" class="form-control" placeholder="Enter you password">
+                      <span class="input-group-text"><i class="fa-solid fa-lock"></i></span>
+
+                    </div>
+                    <div class="mb-3 d-grid">
+                      <button class="btn btn-success"><i class="fa-solid fa-lock"></i> Login</button>
+                    </div>
+                  </form>
+                 </div>
+               </div>
+            </div>
+          </div>
+        </div>
         
 
-        
-         <div class="mt-5"></div>
+         <div class="mb-2"></div>
       <script src="assets/bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js">  </script>
   </body>
