--- a/components/forms/Request-form/tutorial-reqest.html
+++ b/components/forms/Request-form/tutorial-reqest.html
@@ -55,7 +55,7 @@
       <!-- end Header -->
       
       <!-- Totorial request form -->
-      <section class="bg-hero pt-5 text-white">
+      <section class="bg-hero pt-0 pt-sm-5 text-white">
          <div class="container">
            <div class="row">
              <div class="col-sm-4">
@@ -70,18 +70,29 @@
               <div class="card">
                 <!-- form -->
                  <div class="card-body">
-                  <form action="" class="post">
+                  <form action="/"  class="needs-validation" method="post" novalidate>
                      <div class="row">
                         <div class="col-sm-6">
                            <div class="mb-2">
                              <label for="FullName" class="form-label">Full Name</label>
-                             <input type="text" name="fullName" id="FullName" class="form-control" placeholder="Full name">
+                             <input type="text" name="fullName" id="FullName" 
+                             class="form-control" placeholder="Full name" required>
+                             <div class="valid-feedback">
+                              Looks good!
+                            </div>
+                            <div class="invalid-feedback">
+                              Enter your Name
+                            </div>
                            </div>
                         </div>
                         <div class="col-sm-6">
                           <div class="mb-2">
                             <label for="email" class="form-label">email</label>
-                            <input type="text" name="email" id="email" class="form-control" placeholder="Enter your email">
+                            <input type="text" name="email" 
+                            id="email" class="form-control" placeholder="Enter your email" required>
+                            <div class="invalid-feedback">
+                              Enter your email
+                            </div>
                           </div>
                        </div>
                     </div>
@@ -129,8 +140,9 @@
                       <div class="col-sm-6">
                          <div class="mb-2">
                             <label for="isSubscribed">Did you subscribe to the channel</label>
-                            <div class="form-check">
-                              <input type="radio" class="form-check-input" name="isSubscribed" id="isSubscribed"  value="YES">
+                            <div cflass="form-check">
+                              <input type="radio" class="form-check-input" name="isSubscribed"
+                               id="isSubscribed"  value="YES" required>
                               <label for="isSubscribed" class="form-check-label">Yes</label>
                             </div>
                             <div class="form-check">
@@ -142,7 +154,7 @@
                            <label for="year" class="form-label">From which year are you with us</label>
                            <select name="year" id="year" class="form-select" aria-label="Default select examplw">
                             <option selected>-- Select year --</option>
-                            <option value="2022">2022</option>
+                            <option value="2022" selected>2022</option>
                             <option value="2020">2020</option>
                             <option value="2018">2018</option>
                             <option value="Other year">Other year</option>
@@ -177,9 +189,9 @@
                     </div>
 
                     <div class="mb-2 d-grid">
-                      <div class="btn btn-primary">
-                        <i class="fa-solid fa-lock me-2"></i>
-                        Register</div>
+                      
+                        <input type="submit" value="Register now" 
+                        class="btn btn-success" >
                     </div>
                   </form>
                   </div>
@@ -189,9 +201,30 @@
            </div>
          </div>
       </section>
-
+    
 
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js">  </script>
+      <script>
+        // Example starter JavaScript for disabling form submissions if there are invalid fields
+(() => {
+  'use strict'
+
+  // Fetch all the forms we want to apply custom Bootstrap validation styles to
+  const forms = document.querySelectorAll('.needs-validation')
+
+  // Loop over them and prevent submission
+  Array.from(forms).forEach(form => {
+    form.addEventListener('submit', event => {
+      if (!form.checkValidity()) {
+        event.preventDefault()
+        event.stopPropagation()
+      }
+
+      form.classList.add('was-validated')
+    }, false)
+  })
+})()
+      </script>
   </body>
 </html>
