--- a/components/Migration/index.html
+++ b/components/Migration/index.html
@@ -45,7 +45,12 @@
                       content will be cropped and scrollable within the modal.</p>
           </div>
           <div class="modal-footer">
+                    <button class="btn btn-outline-danger"
+              type="button" data-bs-toggle="modal" data-bs-name="Siva"
+              data-bs-target="#user">
+              Users</button>
              <button class="btn btn-primary" data-bs-dismiss="modal">Close</button>
+
           </div>
          </div>
       </div>
@@ -106,12 +111,15 @@
             </div>
           </div>
           <div class="modal-footer">
+            
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
     </div>
     
+
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script>
